[package]
name = "wolog"
version = "0.1.0"
edition = "2021"

[dependencies]
atom_syndication = "0.12.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
pandoc_ast = "0.8.6"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
sqlx = { version = "0.8.2", features = ["chrono", "json", "postgres", "runtime-tokio", "sqlite"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "2.0.3"
walkdir = "2.5.0"
# indieweb = { version = "0.4.5", default-features = false, features = ["reaction", "reqwest", "reqwest_middleware"] }
tracing = "0.1.41"
color-eyre = "0.6.3"
tera = "1.20.0"
url = { version = "2.5.4", features = ["serde"] }
