[package]
name = "wolog"
version = "0.2.1"
edition = "2021"

[dependencies]
atom_syndication = "0.12.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
pandoc_ast = "0.8.6"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "json",
    "postgres",
    "runtime-tokio",
    "sqlite",
] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "2.0.3"
walkdir = "2.5.0"
# indieweb = { version = "0.4.5", default-features = false, features = ["reaction", "reqwest", "reqwest_middleware"] }
tracing = "0.1.41"
color-eyre = "0.6.3"
tera = "1.20.0"
url = { version = "2.5.4", features = ["serde"] }
tempfile = "3.14.0"
reqwest = "0.12.9"
dom_query = { version = "0.17.0", features = ["atomic"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
openidconnect = "4.0.0"
rocket-governor = { version = "0.2.0-rc.4", features = ["limit_info"] }
toml = "0.8.22"
dashmap = "6.1.0"
tokio-stream = "0.1.17"
